add volume and speed text description, add fullscreen html

--- a/11-Custom_Video_Player/style.css
+++ b/11-Custom_Video_Player/style.css
@@ -91,3 +91,12 @@ body {
   flex: 0;
   flex-basis: 10%;
 }
+
+label {
+  font-size: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  background: transparent;
+}
