--- a/15-LocalStorage/style.css
+++ b/15-LocalStorage/style.css
@@ -64,6 +64,11 @@ h2 {
   border: 1px solid rgba(0,0,0,0.1)
 }
 
+.plates label {
+  flex: 1;
+  cursor: pointer;
+}
+
 .plates input + label:before {
   content: "⬜️";
   margin-right: 10px;
@@ -72,4 +77,13 @@ h2 {
 .plates input:checked + label:before {
   content: "🌮";
   margin-right: 10px;
+}
+
+.delete {
+  display: flex;
+  text-align: right;
+  padding-left: 5px;
+  padding-right: 20px;
+  color: rgb(207, 72, 72);
+  cursor: pointer;
 }
